tests/snapshots/golden__claimed_ref_rewards.snap
---
source: tests/golden.rs
expression: out
---
[
  {
    "op_id": "00000000-0000-0000-0000-000000000000",
    "factory_op_id": 0,
    "event_hash": "deadbeef#0#lend_ref_rewards_claimed",
    "chain_id": 0,
    "event_type": "claimed_ref_rewards",
    "user_address": "GBZXN7PIRZGNMHGA7MUUUF4GWPY5AYPV6LY4UV2GL6VJGIQRXFDNMADI",
    "block_number": 12345,
    "data": {
      "tx_hash": "deadbeef#0",
      "usdc_amount": "250"
    },
    "created_at": "2023-11-14T22:13:20Z"
  }
]
