tests/snapshots/golden__invested.snap
---
source: tests/golden.rs
expression: out
---
[
  {
    "op_id": "00000000-0000-0000-0000-000000000007",
    "factory_op_id": 7,
    "event_hash": "deadbeef#0#lend_invested",
    "chain_id": 0,
    "event_type": "invested",
    "user_address": "GBZXN7PIRZGNMHGA7MUUUF4GWPY5AYPV6LY4UV2GL6VJGIQRXFDNMADI",
    "block_number": 12345,
    "data": {
      "shares_bought": "50",
      "tx_hash": "deadbeef#0",
      "usdc_amount": "100"
    },
    "created_at": "2023-11-14T22:13:20Z"
  }
]
