tests/snapshots/golden__op_canceled.snap
---
source: tests/golden.rs
expression: out
---
[
  {
    "op_id": "00000000-0000-0000-0000-000000000007",
    "factory_op_id": 7,
    "event_hash": "deadbeef#0#lend_op_canceled",
    "chain_id": 0,
    "event_type": "op_canceled",
    "user_address": null,
    "block_number": 12345,
    "data": {
      "tx_hash": "deadbeef#0"
    },
    "created_at": "2023-11-14T22:13:20Z"
  }
]
